src/snapshots/lambda3__cst__tests__test@simple_boolean_literal_application.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/simple_boolean_literal_application.l3
---
(
    "\\x -> true false",
    [],
    RootE@0..16
      LambdaE@0..16
        Backslash@0..1 "\\"
        VarP@1..2
          Ident@1..2 "x"
        Whitespace@2..3 " "
        Arrow@3..5 "->"
        ApplicationE@5..16
          LiteralE@5..10
            Whitespace@5..6 " "
            TrueKw@6..10 "true"
          LiteralE@10..16
            Whitespace@10..11 " "
            FalseKw@11..16 "false"
    ,
)
